# sportsclub

./: database.py  main.py  pyproject.toml
static/css/: styles.css
static/js/: app.js
templates/: base.html  index.html
