[tool.poetry]
name = "repl-nix-sportconnecthub"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.3"
psycopg2-binary = "^2.9.9"
flask-auth0 = "^0.1.0"
python-dotenv = "^1.0.1"
authlib = "^1.3.2"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
